@@ -477,7 +477,7 @@ SYBASEUSERPATH = @SYBASEUSERPATH@
 ifneq ($(strip $(SYBASELIBS)),)
 ifneq ($(strip $(SYBASELIBSPATH)),)
 ifeq ($(SYBASEUSERPATH),yes)
-SYBASELIBS += -R $(SYBASELIBSPATH)
+SYBASELIBS += @DISABLE_NEW_DTAGS@ -R $(SYBASELIBSPATH)
 endif
 endif
 endif
@@ -529,7 +529,7 @@ DB2USERPATH = @DB2USERPATH@
 ifneq ($(strip $(DB2LIBS)),)
 ifneq ($(strip $(DB2LIBSPATH)),)
 ifeq ($(DB2USERPATH),yes)
-DB2LIBS += -R $(DB2LIBSPATH)
+DB2LIBS += @DISABLE_NEW_DTAGS@ -R $(DB2LIBSPATH)
 endif
 endif
 endif
@@ -559,14 +559,14 @@ INFORMIXUSERPATH = @INFORMIXUSERPATH@
 ifneq ($(strip $(INFORMIXLIBS)),)
 ifneq ($(strip $(INFORMIXCLILIBSPATH)),)
 ifeq ($(INFORMIXUSERPATH),yes)
-INFORMIXLIBS += -R $(INFORMIXCLILIBSPATH)
+INFORMIXLIBS += @DISABLE_NEW_DTAGS@ -R $(INFORMIXCLILIBSPATH)
 endif
 endif
 endif
 ifneq ($(strip $(INFORMIXLIBS)),)
 ifneq ($(strip $(INFORMIXESQLLIBSPATH)),)
 ifeq ($(INFORMIXUSERPATH),yes)
-INFORMIXLIBS += -R $(INFORMIXESQLLIBSPATH)
+INFORMIXLIBS += @DISABLE_NEW_DTAGS@ -R $(INFORMIXESQLLIBSPATH)
 endif
 endif
 endif
